[package]
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>, Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
name = "slowloris"
version = "0.1.0"
license = "MIT"
description = "The slow loris attack, now implemented in Rust! "
readme = "readme.md"
documentation = "https://docs.rs/slowloris"
repository = "https://github.com/SirRade/slowloris-rs"
keywords = ["slowloris", "slow", "loris", "attack", "dos"]
categories = ["command-line-utilities", "web-programming"]
[dependencies]
native-tls = "0.1.4"
rand = "0.3.17"
rayon = "0.8.2"
url = "1.6.0"
