[package]
authors = [
    "Jan Hohenheim <jan@hohenheim.ch>",
    "Ruben Schmidmeister <ruben.schmidmeister@icloud.com>",
]
categories = [
    "command-line-utilities",
    "web-programming",
]
description = "The slow loris attack, now implemented in Rust! "
documentation = "https://docs.rs/slowloris"
keywords = [
    "slowloris",
    "slow",
    "loris",
    "attack",
    "dos",
]
license = "MIT"
name = "slowloris"
readme = "readme.md"
repository = "https://github.com/SirRade/slowloris-rs"
version = "1.2.0"

[dependencies]
clap = { version = "3.1.17", features = ["cargo"] }
native-tls = "0.2.10"
rand = "0.8.5"
rayon = "1.5.2"
url = "2.2.2"
